--- a/crunch/css/home.css
+++ b/crunch/css/home.css
@@ -87,7 +87,7 @@ a{
 .foot {
   margin-top: 40px;
   display: grid; 
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 60px;
   color: #a0a0a0;
 }
@@ -108,14 +108,25 @@ a{
   color: #a0a0a0;
 }
 
+.box1 > p, .box2 > p, .box3 > p, .box4 > p {
+  margin-top: 5px;
+  font-size: 14px;
+}
+
 .ajuste {
   font-weight: 500;
 }
 
 .degrade {
+  display: grid;
+  justify-items: center;
   background-image: linear-gradient(
     #000000, #213944
   );
+}
+
+.centra {
+  width: 1100px;
 }
 
 .contrast {
