--- a/crunch/css/tdsSeries.css
+++ b/crunch/css/tdsSeries.css
@@ -1,101 +1,19 @@
-body {
-  color: white;
-  font-family: "Lato", sans-serif;
-  background-color: #000000;
-  margin: 0px;
-}
-
-.container {
+body{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 4;
-  margin-top: 60px;
-  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  justify-content: center;
 }
-
-.film {
-  width: 300px;
-  height: 400px;
-}
-
-.navbar {
-  background-color: #23252B;
+.Bl{
+  grid-column: 1/6;
   display: flex;
-  justify-content: start;
-  gap: 20px;
 }
-
-a{
-  color: white;
-  font-size: 20px;
-  text-decoration: none;
+.cha{
+  grid-column: 2/6;
   
 }
-
-.foot {
-  margin-top: 40px;
-  display: grid; 
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 60px;
-  color: #a0a0a0;
+.mop{
+  width: 10px;
 }
-
-.final_box {
-  display: flex;
-  gap: 10px;
-  padding: 20px 0px 40px 0px;
-
-}
-
-.logo_sony {
-  margin-top: 5px;
-  width: 158px;
-  height: 12px;
-}
-
-.final_box > p {
-  margin: 0px;
-  color: #a0a0a0;
-}
-
-.ajuste {
-  font-weight: 500;
-}
-
-.degrade {
-  display: grid;
-  justify-items: center;
-  background-image: linear-gradient(
-    #000000, #213944
-  );
-}
-
-.centra {
-  width: 1100px;
-}
-
-.contrast {
-  color: white;
-  font-weight: 700;
-}
-
-.Crun{
-  width: 200px;
-}
-
-.lato-regular {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-hr {
-  height: 0.3px;
-  border: none;
-  background-color: #a0a0a0;
-  opacity: 0.3;
-}
-
-.tiny {
-  opacity: 0.3;
+.filtro{
+  width: 400px;
 }
