--- a/crunch/css/tdsseries.css
+++ b/crunch/css/tdsseries.css
@@ -1,19 +1,159 @@
-body{
+body {
+  color: white;
+  font-family: "Lato", sans-serif;
+  background-color: #000000;
+  margin: 0px;
+}
+
+h1 {
+  position: relative;
+  font-size: 28px;
+  margin: 0px;
+  right: 50px;
+}
+
+p {
+  margin: 0px;
+  font-family: "Lato", sans-serif;
+}
+
+#serie {
+  display: flex;
+  justify-self: start;
+  grid-column: 1/1;
+}
+
+.upbar {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 100px;
   justify-content: center;
 }
-.Bl{
-  grid-column: 1/6;
-  display: flex;
+
+.grid {
+  display: grid;
+  grid-template-columns: 200px 1fr 1fr 1fr 1fr;
+  gap: 80px;
 }
-.cha{
-  grid-column: 2/6;
+
+.tam {
+  height: 20px;
+  margin-right: 10px;
+}
+
+.flex {
+  display: flex;
+  grid-column: 4;
+}
+
+.flex2 {
+  display: flex;
+  grid-column: 5;
+}
+
+.tamanho {
+  opacity: 0.8;
+  font-family: "Lato", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  justify-items: end;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 4;
+  margin-top: 60px;
+  justify-items: center;
+  padding: 0px 60px 0px 60px;
+  margin-bottom: 200px;
+}
+
+.film {
+  width: 300px;
+  height: 400px;
   
 }
-.mop{
-  width: 10px;
+
+.navbar {
+  background-color: #23252B;
+  display: flex;
+  justify-content: start;
+  gap: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  margin-bottom: 80px;
 }
-.filtro{
-  width: 400px;
+
+a{
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
+  
+}
+
+.foot {
+  margin-top: 40px;
+  display: grid; 
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 60px;
+  color: #a0a0a0;
+}
+
+.final_box {
+  display: flex;
+  gap: 10px;
+  padding: 20px 0px 40px 0px;
+}
+
+.logo_sony {
+  margin-top: 5px;
+  width: 158px;
+  height: 12px;
+}
+
+.final_box > p {
+  margin: 0px;
+  color: #a0a0a0;
+}
+
+.ajuste {
+  font-weight: 500;
+}
+
+.degrade {
+  display: grid;
+  justify-items: center;
+  background-image: linear-gradient(
+    #000000, #213944
+  );
+}
+
+.centra {
+  width: 1100px;
+}
+
+.contrast {
+  color: white;
+  font-weight: 700;
+}
+
+.Crun{
+  width: 200px;
+}
+
+.lato-regular {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+hr {
+  height: 0.3px;
+  border: none;
+  background-color: #a0a0a0;
+  opacity: 0.3;
+}
+
+.tiny {
+  opacity: 0.3;
 }
