--- a/crunch/css/padrao.css
+++ b/crunch/css/padrao.css
@@ -1,3 +1,10 @@
+body {
+  color: white;
+  font-family: "Lato", sans-serif;
+  background-color: #000000;
+  margin: 0px;
+}
+
 .navbar {
   background-color: #23252B;
   display: flex;
@@ -7,8 +14,6 @@
 
 .lato-regular {
   font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-style: normal;
 }
 
 a{
