ajustes na navbar
está quase finalizada, faltando apenas alguns icons

--- a/crunch/css/padrao.css
+++ b/crunch/css/padrao.css
@@ -5,11 +5,20 @@ body {
   margin: 0px;
 }
 
-.navbar {
-  background-color: #23252B;
-  display: flex;
+.divLarger {
+  display: grid;
+  grid-template-columns:15% 5% 5% 1fr 10% 10%;
   justify-content: start;
   gap: 20px;
+}
+
+.navbar {
+  background-color: #23252B;
+  max-width: max-content;
+  height: 60px;
+  position: fixed;
+  top: 0px;
+  z-index: 999;
 }
 
 .lato-regular {
@@ -24,9 +33,48 @@ a{
 }
 
 .Crun{
-  width: 200px;
+  max-width: 70%;
+  position: relative;
+  top: 10px;
+  left: 30px;
+  
 }
 
+.tdsS {
+  padding-top: 10px;
+  grid-column: 2;
+}
+
+.tdsF {
+  padding-top: 10px;
+  grid-column: 3;
+
+}
+
+.iconzinhos {
+
+}
+
+.user {
+  display: grid;
+  justify-items: center;
+  grid-column: 6;
+}
+
+.iconuser {
+  position: relative;
+  top: 5px;
+  max-width: 30%;
+  padding-right: 30px;
+}
+
+.setinha {
+position: relative;
+bottom: 30px;
+left: 20px;
+font-size: 24px;
+cursor: pointer;
+}
 /* footer */
 
 .foot {
