--- a/crunch/css/home.css
+++ b/crunch/css/home.css
@@ -1,24 +1,32 @@
+body {
+  padding-top: 50px;
+}
+
+h2 {
+  max-width: max-content;
+}
+
 .top1 {
-  width: 300px;
-  height: 400px;
+max-width: 50%;
 }
 
 .banner {
   position: absolute;
   z-index: -999;
-  width: 2000px;
-  height: 400px;
+  width: 100%;
+  height: 700px;
 }
 
 .number {
   display: flex;
   position: relative;
   z-index: -999;
-  left: 70px;
+  left: 50px;
   top: 30px;
-  font-size: 340px;
+  font-size: 250px;
   color: white;
   font-family: "Lato", sans-serif;
+  margin: 0px;
 }
 
 .desca {
@@ -36,13 +44,16 @@
 }
 
 .top_3 {
+  max-width: max-content;
   margin-top: 70px;
   display: grid;
   grid-template-rows: 2;
+  padding-top: 250px;
 }
 
 .top3_content {
   display: grid;
+  max-width: max-content;
   grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
 }
@@ -90,12 +101,14 @@ a{
   width: 320px;
   position: relative;
   left: 20px;
+  top: 200px;
 }
 .sinopse{
   text-align: start;
   grid-column: 1/2;
   position: relative;
   left: 20px;
+  top: 200px;
 }
 
 .Animeprin{
@@ -107,12 +120,13 @@ a{
   width: 500px;
   position: relative;
   left: 20px;
+  top: 200px;
 }
 .idade{
   width: 30px;
   grid-column: 1/2;
   position: absolute;
-  top: 140px;
+  top: 340px;
   left: 20px;
 }
 .ling{
@@ -120,6 +134,8 @@ a{
   grid-column: 1/2;
   position: relative;
   left: 60px;
+  top: 200px;
+
 }
 .seta{
   font-size: 30px;
