--- a/crunch/css/filmeModelo.css
+++ b/crunch/css/filmeModelo.css
@@ -13,7 +13,9 @@
 .modeloLeft {
   max-width: 50%;
   padding-left: 150px;
-  width: 200px;
+  width: 190px;
+  position: relative;
+  left: 40px;
 }
 
 #titulo {
@@ -40,7 +42,7 @@
 .txtArea {
   background-color: #141519;
   border: #36373a solid 1px;
-  padding: 12px;
+  padding: 10px;
 }
 h2 {
   font-size: 17px;
@@ -50,7 +52,7 @@ h2 {
 .num {
   font-size: 12px;
   color: #adaeb1;
-  cursor:default;
+  cursor: default;
 }
 .barra {
   color: #adaeb1;
@@ -83,8 +85,7 @@ h2 {
 }
 .like {
   width: 25px;
-  cursor:pointer;
-  
+  cursor: pointer;
 }
 .dislike {
   width: 25px;
@@ -111,4 +112,136 @@ h2 {
   position: relative;
   left: 477px;
   cursor: pointer;
+}
+.coroa {
+  width: 20px;
+  position: relative;
+  top: 3px;
+}
+.coment {
+  color: #fab818;
+}
+.mais {
+  width: 25px;
+  position: relative;
+  left: 400px;
+  top: 7px;
+  cursor: pointer;
+}
+.m {
+  position: relative;
+  left: 405px;
+  color: #adaeb1;
+  cursor: pointer;
+}
+.comentar {
+  width: 200px;
+  cursor: pointer;
+  position: relative;
+  top: 40px;
+  right: 201px;
+}
+.icoon {
+  width: 70px;
+  position: relative;
+  right: 94px;
+  bottom: -130px;
+}
+.comentarios {
+  position: relative;
+  left: 90px;
+}
+.t {
+  font-size: 13px;
+  color: #adaeb1;
+  position: relative;
+  left: 25px;
+}
+.c {
+  position: relative;
+  left: 20px;
+}
+.icon1 {
+  width: 70px;
+  position: relative;
+  right: 8px;
+  top: 25px;
+}
+.com1 {
+  position: relative;
+  left: 90px;
+  bottom: 8px;
+}
+.com2 {
+  position: relative;
+  left: 90px;
+}
+.coments {
+  width: 220px;
+  position: relative;
+  left: 95px;
+  top: -15px;
+}
+.coments1 {
+  width: 220px;
+  position: relative;
+  left: 95px;
+}
+.ex {
+  font-size: 14px;
+  color: #548094;
+  position: relative;
+  left: 90px;
+  top: 20px;
+}
+.ex1 {
+  font-size: 14px;
+  color: #548094;
+  position: relative;
+  left: 90px;
+}
+.gojo {
+  position: relative;
+  top: -40px;
+}
+.modeloRight {
+  position: relative;
+  right: 250px;
+}
+.mdcom {
+  position: relative;
+  left: 300px;
+}
+.i {
+  font-size: 20px;
+}
+input:checked + .checkbox p {
+  display: none;
+}
+input:checked + .checkbox hr {
+  display: none;
+}
+
+input {
+  display: none;
+}
+.audio {
+  position: relative;
+  left: 360px;
+}
+.id {
+  position: relative;
+  left: 444px;
+}
+.idd {
+  position: relative;
+  left: 267px;
+  top: 20px;
+}
+.pt {
+  position: relative;
+  left: 465px;
+}
+.mos{
+  color: #adaeb1;
 }
