mais uma vez comitando

--- a/crunch/css/home.css
+++ b/crunch/css/home.css
@@ -59,6 +59,15 @@ h2 {
   position: relative;
   bottom: 10px;
 }
+.legenda{
+  color: #adaeb1;
+  position: relative;
+  bottom: 20px;
+}
+.titu{
+  position: relative;
+  bottom: 10px;
+}
 
 .salvarr {
   grid-column: 1;
