--- a/crunch/css/home.css
+++ b/crunch/css/home.css
@@ -1,5 +1,3 @@
-
-
 body {
   padding-top: 50px;
 }
@@ -40,33 +38,35 @@ h2 {
   grid-column: 1/1;
   grid-row: 2/2;
   position: relative;
-  left:17px;
+  left: 17px;
+  top: 10px;
 }
 
 .desca1 {
   grid-column: 2;
   grid-row: 2/2;
   position: relative;
-  left:37px;
+  left: 37px;
+  top: 10px;
 }
 .desca2 {
   grid-column: 3;
   grid-row: 2/2;
   position: relative;
-  left:9px;
-  
+  left: 9px;
+  top: 10px;
 }
-.legen{
+.legen {
   color: #adaeb1;
   position: relative;
   bottom: 10px;
 }
-.legenda{
+.legenda {
   color: #adaeb1;
   position: relative;
   bottom: 20px;
 }
-.titu{
+.titu {
   position: relative;
   bottom: 10px;
 }
@@ -92,11 +92,13 @@ h2 {
 .top1 {
   height: 307px;
   width: 204px;
-  }
-  
-  .a-img {
-    display: flex;
-  }
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.a-img {
+  display: flex;
+}
 
 .top3_content {
   display: grid;
@@ -193,18 +195,21 @@ a {
   position: relative;
   left: 10px;
 }
-.tito{
+.tito {
   position: relative;
-  left:60px;
+  left: 60px;
   padding: 40px;
 }
 
-
 .outline {
-  transition: all .5s;
+  transition: all 0.5s;
   border: 10px solid transparent;
 }
 
 .outline:hover {
   border: 1px solid #ffffff;
+}
+.outline1:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
 }
