--- a/crunch/css/home.css
+++ b/crunch/css/home.css
@@ -202,7 +202,7 @@ a {
 }
 
 .outline {
-  transition: all 0.5s;
+  transition: all 0.2s;
   border: 10px solid transparent;
 }
 
@@ -212,4 +212,20 @@ a {
 .outline1:hover {
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
+}
+
+.anuncio {
+  display: block;
+  padding-left: 70px;
+}
+
+.promo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-left: 70px;
+}
+
+.promoImg {
+  width: 100%;
+  height: 100%;
 }
